# mkdocs-epigraph

./: README.md  pyproject.toml
.github/ci/: workflow.yml
.github/workflows/: workflow.yml
demo/: mkdocs.yml
demo/docs/: index.md
mkdocs_plugin_epigraph/: plugin.py
