[tool.poetry]
name = "mkdocs-epigraph"
version = "0.5.0"
description = "Add epigraphs to your MkDocs documentation"
authors = ["Yves Chevallier <yves.chevallier@heig-vd.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mkdocs_plugin_epigraph" }]
keywords = ["mkdocs", "python", "epigraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
toml = "^0.10.2"
ruff = "^0.9.1"
black = "^24.10.0"

[tool.poetry.plugins."mkdocs.plugins"]
"epigraph" = "mkdocs_plugin_epigraph.plugin:EpigraphPlugin"
